--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xmlns="http://maven.apache.org/POM/4.0.0"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>me.iwareq.scoreboard</groupId>
@@ -9,8 +9,8 @@
 	<version>2.2.1</version>
 
 	<properties>
-		<maven.compiler.source>8</maven.compiler.source>
-		<maven.compiler.target>8</maven.compiler.target>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -48,27 +48,27 @@
 
 	<repositories>
 		<repository>
-			<id>opencollab-repo-release</id>
-			<url>https://repo.opencollab.dev/maven-releases</url>
+			<id>jitpack.io</id>
+			<url>https://www.jitpack.io</url>
 		</repository>
 		<repository>
-			<id>opencollab-repo-snapshot</id>
+			<id>opencollab-repository-maven-snapshots</id>
+			<name>Opencollab Repository snapshots</name>
 			<url>https://repo.opencollab.dev/maven-snapshots</url>
 		</repository>
 	</repositories>
 
 	<dependencies>
 		<dependency>
-			<groupId>cn.nukkit</groupId>
-			<artifactId>nukkit</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<groupId>com.github.PowerNukkitX</groupId>
+			<artifactId>PowerNukkitX</artifactId>
+			<version>master-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.24</version>
+			<version>1.18.32</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
